Added missing class to notes <ol>

--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -111,7 +111,7 @@ next: MA_013.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0434a12" target="_blank">T26.1.434a12-5a23</a>. It’s parallel with <a href="https://suttacentral.net/an4.195" target="_blank">AN 4.195</a>. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Śākya people.</em> C. <span class="ch">釋羇瘦</span> (EMC. ʃɪɛk-kɪĕ-ṣïəu = Pr. <em>śakeṣu</em>?), P. <em>sakkesu</em>. This is the translit. of a term that means the people of Śākya. The English equivalent would be Śākyans, just as “Americans” means “people of America.”<br/>
 <em>Kapilavastu.</em> C. <span class="ch">迦維羅衛</span> (EMC. kă-yiui-la-ɦɪuɛi = G. <em>Ka’ilava[stu]</em>?), P. <em>kapilavatthu</em>. This was the capital of the Śākya lands.<br/>
