--- a/01_agama/madhyama/MA_013.md
+++ b/01_agama/madhyama/MA_013.md
@@ -115,7 +115,7 @@ next: MA_015.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0435a24" target="_blank">T26.1.435a24-6a11</a>. It’s parallel with <a href="https://suttacentral.net/an3.61" target="_blank">AN 3.61</a>.<br/>
 The title of this <em>sūtra</em> was translated as <span class="ch">度</span> (“go beyond, liberate, freedom”), but <span class="ch">度</span> is often read as a simpler form of 渡 (“to ford a river”). This is confirmed when we observe that the Theravāda parallel is titled P. <em>titthāyatana</em>. Here, <em>tittha</em> is reasonably read in this context as meaning the tenets or doctrines of a religious sect, but the literal meaning is a “fording place” on a river. This is because Indian liberation religions used the metaphor of crossing a river or flood for the attainment of their ultimate goal. Thus, the truths or tenets that they claimed would achieve that goal were idiomatically called “fording places.” Given all of this, we can safely assume that 度 translates a cognate of P. <em>tittha</em> (cf. G. <em>tiṭ́ha</em> > S. <em>tīrtha</em>). I’ve maintained the literal reading to represent the C. translator’s intent.<br/>
 In general, this <em>sūtra</em> is a close parallel to AN 3.61. There are, however, some significant differences in wording, and the AN version has an added section on eighteen mental preoccupations. Otherwise, the two texts are the same in their basic outline and content. [<a href="#ref1">back</a>]</li>
