--- a/01_agama/madhyama/MA_025.md
+++ b/01_agama/madhyama/MA_025.md
@@ -75,7 +75,7 @@ next: MA_029.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0454a03" target="_blank">T26.1.454a3-c17</a>. The only known parallel is <a href="https://suttacentral.net/an5.162" target="_blank">AN 5.162</a>. While there are a few minor variations in wording, especially in the five similes used to illustrate the five methods, these two texts are identical in their meaning and structure.<br/>
 The Taisho editors made a note about <a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0129a27" target="_blank">SĀ 496</a> having a possible relationship with this <em>sūtra</em>. It recommends how two monks involved in a dispute should examine themselves and others to discipline themselves. There doesn’t appear to be a direct textual relationship with this <em>sūtra</em>, but they do both address the issue of monks getting upset with each other’s behavior. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>five ways to eliminate irritation</em>. C. <span class="ch">五除惱法</span>, P. <em>pañcā aghatapaṭivinayā</em>. The C. <span class="ch">惱</span> here is a general term for irritation, vexation, anxiety, and similar unpleasant feelings that cause distress. P. <em>aghata</em> lit. means “to be angered” and generally refers to irritation or annoyance. Throughout the <em>sūtra</em> below, <span class="ch">惱</span> is translated as <span class="ch">恚惱</span>, which I’ve rendered to English as “to be angered” as when a pet peeve or irritating situation causes a flare of emotion. [<a href="#ref2">back</a>]</li>
