--- a/01_agama/madhyama/MA_041.md
+++ b/01_agama/madhyama/MA_041.md
@@ -75,7 +75,7 @@ next: MA_042.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0484b28" target="_blank">T26.1.484b28-5a1</a>. It’s parallel with <a href="https://suttacentral.net/an8.23" target="_blank">AN 8.23</a>. These two texts are quite similar; however, a doctrinal difference becomes apparent when we observe the two lists of qualities attributed to Hastaka.<br/>
 In AN 8.23, the seven qualities of Hatthaka are that he was faithful (P. <em>saddho</em>), ethical (<em>sīlavā</em>), conscientious (<em>hirīmā</em>), prudent (<em>ottappī</em>), learned (<em>bahussuto</em>), generous (<em>cāgavā</em>), and wise (<em>paññavā</em>). When the Buddha learns of Hatthaka’s modesty about being praised in this way, he adds an eight quality of having few desires.<br/>
 In the present <em>sūtra</em>, he is said to possess eight qualities: He had few desires (<span class="ch">少欲</span>) and was faithful (<span class="ch">有信</span>), modest (<span class="ch">有慚</span>), conscientious (<span class="ch">有愧</span>), diligent (<span class="ch">有精進</span>), mindful (<span class="ch">有念</span>), settled (<span class="ch">有定</span>), and wise (<span class="ch">有慧</span>).<br/>
