--- a/01_agama/madhyama/MA_092.md
+++ b/01_agama/madhyama/MA_092.md
@@ -71,7 +71,7 @@ next: MA_095.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0574c01" target="_blank">T26.1.574c1-5a18</a>. Its direct parallels are <a href="https://suttacentral.net/an10.23" target="_blank">AN 10.23</a> and <a href="https://suttacentral.net/sn22.94" target="_blank">SN 22.94</a>. It shares the same initial sermon with AN 10.23 but then concludes with the metaphor of the lotus flower that concludes SN 22.94. The list of defilements is closer to that found in <a href="https://suttacentral.net/mn40" target="_blank">MN 40</a> and MĀ 183 than the one found in AN 10.23-24, but the two versions appear to be variants of the same list. See the notes below for more details on these points. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Longing … contentiousness … malice … fits of rage … not admitting [other’s virtues] … fixation … stinginess … jealousy … deception … fraud … lack of modesty … lack of conscience … bad desires … bad views.</em> C. <span class="ch">增伺⋯諍訟⋯恚恨⋯瞋纏⋯不語⋯結⋯慳⋯嫉⋯欺誑⋯諛諂⋯無慙⋯無愧⋯惡欲⋯惡見</span>. The separation of this list into fourteen items is based on the passages in MĀ 183 that treats each separately (see below).<br/>
 A similar list of ten defilements is found at AN 10.23-24 that reads <em>lobha … dosa … moha … kodha … upanāha … makkha … paḷāsa … macchariya … pāpikā issā … pāpikā icchā</em>. A parallel set of twelve defilements is also found in MN 40: <em>abhijjhā … byāpāda … kodha … upanāha … makkha … paḷāsa … issā … macchariya … sāṭheyyā … māyā … pāpikā icchā … micchādiṭṭhi</em>. A parallel to this list occurs in MĀ 183: <span class="ch">貪伺⋯恚⋯瞋⋯不語⋯結⋯慳⋯嫉⋯諛諂⋯欺誑⋯無慙⋯無愧⋯惡欲⋯邪見</span>. We can surmise, then, that there were at least three versions of this list of defilements, with some minor discrepancies in their different witnesses.<br/>
