--- a/01_agama/madhyama/MA_095.md
+++ b/01_agama/madhyama/MA_095.md
@@ -55,7 +55,7 @@ next: MA_096.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0577b02" target="_blank">T26.1.577b2-c13</a>. It’s parallel with <a href="https://suttacentral.net/an10.53" target="_blank">AN 10.53</a>. These two texts are quite similar to <a href="MA_096.html" target="_blank">MĀ 96</a> and <a href="https://suttacentral.net/an10.55" target="_blank">AN 10.55</a>. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>discuss</em>. C. 說, P. <em>vaṇṇayāmi</em>. In AN 10.53, the Buddha says he doesn’t praise abiding or retreating, but only growth in skillful qualities, whereas here he simply announces three topics that he’ll discuss for the monks. The C. could well translate the same word as the P. because <em>vaṇṇayāmi</em> can mean “comment on, interpret, explain” or “praise, extol.” AN 10.53 indicates the latter reading by negating the verb for the undesireable topics. This looks like an example of a single word being interpreted differently by separate traditions or dialects and the context being shaped to accomodate the chosen reading.<br/>
 <em>in skillful qualities</em>. While the C. could be read as “good Dharma,” AN 10.53 reads <em>kusalesu dhammesu</em>, which is in the plural locative case. The list of character traits that will follows also confirms that this is the correct reading. [<a href="#ref2">back</a>]</li>
