--- a/01_agama/madhyama/MA_096.md
+++ b/01_agama/madhyama/MA_096.md
@@ -47,7 +47,7 @@ next: MA_098.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0577c15" target="_blank">T26.1.577c15-8a25</a>. Its parallel is <a href="https://suttacentral.net/an10.55" target="_blank">AN 10.55</a>, but it shares more in common with <a href="MA_095.html" target="_blank">MĀ 95</a> and <a href="https://suttacentral.net/an10.53" target="_blank">AN 10.53</a>.<br/>
 The title of this <em>sūtra</em> reads simply as <span class="ch">無</span> (“nothing” or “having no”), which might be a reading of a word similar to AN 10.55’s title, but the C. trans. of <em>parihāna</em> (“decline, regress”) would instead be <span class="ch">衰退</span>. I’ve chosen to read <span class="ch">無</span> in the way it’s used in the body of the <em>sūtra</em>, which is to mean “having no” unskillful qualities.<br/>
 This <em>sūtra</em> and AN 10.55 have somewhat differently worded introductions, yet they contain the same keywords and meaning. Afterward, Śāriputra gives the same teaching as the one given by the Buddha in MĀ 95, as the final three paragraphs in both <em>sūtra</em>s are nearly identical. The parallel to this <em>sūtra</em>, AN 10.55, has a different teaching in which the practitioner assesses their skillful rather than unskillful qualities. As a result, it is only a similar parallel. [<a href="#ref1">back</a>]</li>
