--- a/01_agama/madhyama/MA_137.md
+++ b/01_agama/madhyama/MA_137.md
@@ -131,7 +131,7 @@ next: MA_139.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0645b09" target="_blank">T26.1.645b9-c13</a>. It’s parallel with <a href="https://suttacentral.net/an4.23" target="_blank">AN 4.23</a> and <a href="https://suttacentral.net/iti112" target="_blank">Iti 112</a>. Both of the Pali parallels are identical with each other aside from a couple formatting differences.<br/>
 The beginning of this <em>sūtra</em> is essentially the same as the Pali version. It applies an analysis very similar to that applied to suffering in the <cite>Turning the Dharma Wheel Sūtra</cite> (cf. <a href="https://suttacentral.net/sn56.11" target="_blank">SN 56.11</a> and <a href="../samyukta/04/SA4_1.html" target="_blank">SĀ 4.1</a>). After that introduction, there is more variation between this text and the P. parallels, but the basic points are the same. Both this and the Pali version end with seven stanzas of verse, and they overlap strikingly in about two or three verses of this material. Overall, however, the degree of divergence suggests that both versions have had verses added to expand an originally shorter summary in different ways. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>The Tathagata himself has discovered the world … way of the world.</em> C. <span class="ch">如來自覺世間，亦為他說。如來知世間。如來自覺世間習，亦為他說。如來斷世間習。如來自覺世間滅，亦為他說。如來世間滅作證。如來自覺世間道跡，亦為他說。如來修世間道跡</span>. P. <em>Loko, bhikkhave, tathāgatena abhisambuddho. Lokasmā tathāgato visaṁyutto. Lokasamudayo, bhikkhave, tathāgatena abhisambuddho. Lokasamudayo tathāgatassa pahīno. Lokanirodho, bhikkhave, tathāgatena abhisambuddho. Lokanirodho tathāgatassa sacchikato. Lokanirodhagāminī paṭipadā, bhikkhave, tathāgatena abhisambuddhā. Lokanirodhagāminī paṭipadā tathāgatassa bhāvitā.</em><br/>
