--- a/01_agama/madhyama/MA_139.md
+++ b/01_agama/madhyama/MA_139.md
@@ -193,7 +193,7 @@ next: MA_140.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0646c09" target="_blank">T26.1.646c9-7a14</a>. The Taisho editors suggest <a href="https://suttacentral.net/snp1.11" target="_blank">Snp 1.11</a> as a parallel. These two texts share the same general topic of contemplating the perceptions of impurity, but they do not appear to descend from a common source. Perhaps they are inspired by only a verse or two summarizing the meditations on impurity.<br/>
 Buddhaghosa reports two origin stories for Snp 1.11 in his commentary. The first teaching was said to be for the benefit of a nun who was still attached to her own beauty by making her realize its impermanence. The second teaching was to correct a monk after a beautiful laywoman who had supported him passed away.<br/>
 The brief background provided here in MĀ 139 seems to be in a different context of teaching junior monks in general. Also, the verses here begin by saying a monk calms his feelings of dislike by contemplating the bodies of all sentient beings, which then makes him feel compassion for them. I would think the origin story for MĀ 139 would’ve been different from the two stories that Buddhaghosa tells us (both of which involve not a small amount of mysogyny). [<a href="#ref1">back</a>]</li>
