--- a/01_agama/madhyama/MA_140.md
+++ b/01_agama/madhyama/MA_140.md
@@ -83,7 +83,7 @@ next: MA_146.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0647a15" target="_blank">T26.1.647a15-b17</a>. It’s directly parallel with <a href="https://suttacentral.net/iti91" target="_blank">Iti 91</a> and <a href="https://cbetaonline.dila.edu.tw/zh/T17n0765_p0682a20" target="_blank">T765.II.32</a> (a <cite>Itivṛttaka</cite> parallel trans. by Xuanzang). It also shares some parallel material with <a href="https://suttacentral.net/sn22.80" target="_blank">SN 22.80</a> and <a href="../samyukta/01/SA1_55.html" target="_blank">SĀ 1.55</a> as well.<br/>
 The partial parallels in SN and SĀ include background stories about what led the Buddha to give the sermon about the goal of the ascetic life. The <cite>Itivuttaka</cite> version found its way into the <cite>Madhyama Āgama</cite>. Such brief <em>sūtra</em>s as this one do not ostensibly belong among the middle length discourses, and their inclusion is largely the reason MĀ contains 70 more individual <em>sūtra</em>s than MN does today (222 vs. 152). About 60 <em>sūtra</em>s in MĀ are less than a page of Taisho in length, and 35 are not more than half a page. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Among the ways of living, the practice of soliciting alms is the extreme of lowliness.</em> C. <span class="ch">於生活中，下極至邊，謂行乞食</span>, P. <em>antamidaṁ, bhikkhave, jīvikānaṁ yadidaṁ piṇḍolyaṁ</em>. The C. expression <span class="ch">至邊</span> (“reach the extreme”) appears to trans. an equiv. of P. <em>antamida</em>, which can mean “an extreme, end, limit, lowest.” I’ve translated the C. accordingly since <span class="ch">邊</span> has a similar range of meanings as <em>anta</em>. [<a href="#ref2">back</a>]</li>
