--- a/01_agama/madhyama/MA_159.md
+++ b/01_agama/madhyama/MA_159.md
@@ -183,7 +183,7 @@ next: MA_176.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
+<ol class="notes-list">
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0681c25" target="_blank">T26.1.681c25-2b9</a>. It has no known parallel among Buddhist sources, nor have I found any occurrence of the priest who appears as the Buddha’s interlocutor. However, there is a very similar passage in the <cite>Br̥hadāraṇyaka Upaniṣad</cite> (@ <a href="https://upanishads.org.in/upanishads/12/3/6/1" target="_blank">3.6.1</a>) in which Gargi questions Yajnavalkya in a very similar way as Agrahana questions the Buddha here in this <em>sūtra</em>. The similarity is difficult to dismiss, but it’s also difficult to determine which might be the original and which was the tradition influenced by it. It could certainly be viewed as a Buddhist response that places <em>nirvāṇa</em> in the position of Yajnavalkya’s unknowable Brahma. See the notes below for more discussion of this parallel. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Agrahana</em>. C. <span class="ch">阿伽羅訶那</span> (EMC. a-gɪă-la-ha-na = Pr. <em>agrahana</em> or <em>agarahana</em>). The only evidence of the meaning or original Indic word for this transliterated name is the EMC. reconstruction and a gloss in the <span class="ch">翻梵語</span> (@ <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1014b11" target="_blank">T2130.54.1014b11</a>). The gloss says that the translit. should be amended to <span class="ch">阿他訶那</span> and that it meant <span class="ch">无熱</span> (“no burning”). This would indicate S. <em>adāhana</em> (“not reduced to ashes”). Unfortunately, this seems a case of the glossary compiler being ignorant of the Pr. readings in the original Āgama text and suggesting speculative corrections based on later S.<br/> 
 Setting this suggestion aside, it also seems plausible that the name could have been S. <em>Āgrahāyaṇa</em> (the name of a month), <em>Agṛhana</em> (“without a house”), or <em>Agarhana</em> (“without reproach”), all of which might resolve to G. <em>agrahana</em> or <em>agarahana</em>. I have adopted Agrahana for this translation, but the exact name in the original remains unclear to me without an Indic parallel or a more plausible gloss of its meaning. [<a href="#ref2">back</a>]</li>
